CHATS_SIT/force-app/main/default/objects/Archived_Record__c.object
<CustomObject>
    <fields>
        <fullName>Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Record Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Archived_Records1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Record Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_At__c</fullName>
        <label>Record Last Modified At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Record Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Archived_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <label>Record Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Archived Record</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Record_Name__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Created_By__c</columns>
        <columns>Last_Modified_At__c</columns>
        <columns>Last_Modified_By__c</columns>
        <columns>Record_Id__c</columns>
        <columns>Object_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Archived Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archived Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>