CHATS_SIT/force-app/main/default/objects/Archived_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Created_Date__c</columns>
    <columns>Created_By__c</columns>
    <columns>Last_Modified_At__c</columns>
    <columns>Last_Modified_By__c</columns>
    <columns>Record_Id__c</columns>
    <columns>Record_Name__c</columns>
    <columns>Object_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Name__c</field>
        <operation>equals</operation>
        <value>23519102</value>
    </filters>
    <label>All</label>
</ListView>